--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "dicct-trial"
+name: DICCT
 output_dir: ../docs
 navbar:
-  title: "dicct-trial"
+  title: DICCT
   left:
   - text: Home
     href: index.html
@@ -9,9 +9,16 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  right:
+  - icon: fab fa-github
+    text: Source code
+    href: https://github.com/TheAcetoLab/dicct-trial
 output:
   workflowr::wflow_html:
     toc: yes
     toc_float: yes
     theme: cosmo
     highlight: textmate
+    number_sections: yes
+    code_folding: hide
+    toc_depth: 5
